Onboarding_V3 WIP, more dependencies to search added, Minor ui fixes for v2, version bump.